add phonegap plugin for amarino

--- a/server/public/decks/deck.js/introduction/index.html
+++ b/server/public/decks/deck.js/introduction/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>Getting Started with deck.js</title>
+	<title>Amarino meets PhoneGap</title>
 	
 	<meta name="description" content="A jQuery library for modern HTML presentations">
 	<meta name="author" content="Caleb Troughton">
@@ -34,10 +34,78 @@
 <body class="deck-container">
 
 <!-- Begin slides -->
+
+<section class="slide" id="title-slide">
+	<h1>Amarino meets PhoneGap</h1>
+    <div>@musart</div>
+</section>
+
+<section class="slide">
+	<h2>What is amarino</h2>
+    <ol>
+        <li>
+            <h3>Android meets Amarino</h3>
+            <p>Android 폰의 알림기능을 폰 내부에서 아닌 다른 곳에서 받고 싶을 경우.</p>
+        </li>
+        <li>
+            <h3>What we need</h3>
+            <p>Android device : amarino library</p>
+            <img src="resources/android.png" alt="">
+            <p>Arduino device : MeetArduino binary, Arduino sketches program</p>
+            <img src="resources/arduino_duemilanove.png" alt="">
+        </li>
+    </ol>
+</section>
+
+<section class="slide">
+	<h2>What is PhoneGap</h2>
+    <ol>
+        <li>
+            <h3>Web framework</h3>
+            <p>Easily create apps using the web technologies you know and love: HTML, CSS and JavaScript</p>
+        </li>
+        <li>
+            <h3>What we need</h3>
+            <p>Android PhoneGap Library</p>
+        </li>
+    </ol>
+</section>
+
+<section class="slide">
+	<h2>amarino and phonegap Architecture</h2>
+    <p></p>
+    <img src="../resources/architecture_of_amarino_and_phonegap.png" alt="">
+</section>
+
+<section class="slide">
+	<h2>Set up Android project</h2>
+    <p></p>
+    <ol>
+        <li>
+            <h3>Amarino Library</h3>
+            <p>Android 폰의 알림기능을 폰 내부에서 아닌 다른 곳에서 받고 싶을 경우.</p>
+        </li>
+        <li>
+            <h3>What we need</h3>
+            <p>Android Phone</p>
+            <p>Arduino</p>
+        </li>
+    </ol>
+</section>
+
+    
+<section class="slide">
+	<h2>The Markup</h2>
+    <p>Slides are just HTML elements with a class of <code>slide</code>.</p>
+    <pre><code></code></pre>
+</section>
+
+<!--
 <section class="slide" id="title-slide">
 	<h1>Getting Started with deck.js</h1>
 </section>
-
+-->
+    
 <section class="slide" id="how-to-overview">
 	<h2>How to Make a Deck</h2>
 	<ol>
