--- a/android/assets/www/index.html
+++ b/android/assets/www/index.html
@@ -34,6 +34,7 @@
             </div>
         </div>
         <script type="text/javascript" src="cordova-2.2.0.js"></script>
+        <script type="text/javascript" src="amarinoPlugin.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
