--- a/server/public/decks/deck.js/introduction/index.html
+++ b/server/public/decks/deck.js/introduction/index.html
@@ -56,7 +56,7 @@
         </li>
         <li>
             <h3>What can we do?</h3>
-            <p>Android phone can control led and receive button press event via bluetooth</p>
+            <p>Android phone can control led and receive button event via bluetooth</p>
         </li>
     </ul>
 </section>
@@ -75,7 +75,7 @@
         </li>
         <li>
             <h3>What can we do?</h3>
-            <p>Web application can load on android phone as a mobile application.</p>
+            <p>Web application can be loaded on android phone as a mobile application.</p>
         </li>
     </ul>
 </section>
@@ -102,7 +102,7 @@
         <li>
             <h3>This presentation</h3>
             <p><code>deck.js</code>, Web presentation framework</p>
-            <p><code>controldeck.js</code> written by node.js amd socket.io</p>
+            <p><code>controldeck.js</code> written by node.js and socket.io</p>
             <img src="../resources/controldeck.png" alt="">
         </li>
     </ul>
